syntax = "proto3";

message File {
    string rootPath = 1;
    repeated Image imgs = 2;
}

message Size {
    uint32 width = 1;
    uint32 height = 2;
}

message Image {
    string path = 1;

    Size size = 2;

    repeated ColorData colors = 3;
}

message ColorData {
    uint32 colorValue = 1;
    uint64 instanceCount = 2;
}
